--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@ body {
 }
 
 .App{
-  background-color: #7E89FD;  
+  background: #7E89FD;  /* fallback for old browsers */
+  background: -webkiыt-linear-gradient(to left, #7E89FD, #eaafc8);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #7E89FD, #eaafc8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .theme {
