--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,14 +1,59 @@
-.footer{
-    height: 84px;
-    background-color: #50fff6;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.footer {
+    background-color: inherit;
+    color: #fff;
+    padding: 30px 0;
 }
 
-.footer p{
+.footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.footer-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.footer-column {
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 20px;
+}
+
+.footer-column h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.footer-column p {
+    font-size: 14px;
+}
+
+.footer-social-icons {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-social-icons li {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.footer-social-icons a {
     color: #fff;
-    margin-left: 20px;
-    font-size: 16px;
-    font-weight: 200;
+    font-size: 20px;
+    transition: color 0.3s;
+}
+
+.footer-social-icons a:hover {
+    color: #ff00cc;
+}
+
+@media screen and (min-width: 768px) {
+    .footer-column {
+        width: calc(33.33% - 40px);
+    }
 }
