--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,92 +1,74 @@
 .navbar {
-  background-color: #ffffff88;
-  height: 80px;
+  background-color: #f8f8f8;
+  padding: 10px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
-  position: sticky;
-  top: 0;
-  z-index: 999;
 }
 
-.navbar-container {
+.navbar-nav {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 80px;
-  width: 100%;
-  max-width: 1200px;
-}
-
-.navbar-logo {
-  color: #000;
-  font-size: 2rem;
-  text-decoration: none;
-}
-
-.menu-icon {
-  display: none;
-}
-
-.nav-menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
   list-style: none;
-  text-align: center;
+  margin: 0;
+  padding: 0;
 }
+
 .nav-item {
-  height: 80px;
+  text-align: center;
 }
 
 .nav-link {
-  color: #000;
-  display: flex;
-  align-items: center;
   text-decoration: none;
-  padding: 0 1rem;
-  height: 100%;
+  color: #333;
+  font-weight: bold;
+  transition: color 0.3s;
 }
-@media screen and (max-width: 960px) {
-  .nav-menu {
-    display: flex;
+
+.nav-link:hover {
+  color: #ff00cc;
+}
+
+.navbar-toggle {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  margin-bottom: 5px;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.open .bar:first-child {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.open .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.open .bar:last-child {
+  transform: translateY(-8px) rotate(-45deg);
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-nav {
     flex-direction: column;
-    width: 100%;
-    height: 90vh;
-    position: absolute;
-    top: 80px;
-    left: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
-  }
-
-  .nav-menu.active {
-    background-color: #ffffff88;
-    left: 0;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 1;
-  }
-
-  .menu-icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
-    cursor: pointer;
-  }
-
-  .nav-link {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
+    align-items: flex-start;
   }
 
   .nav-item {
-    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .navbar-toggle {
+    display: block;
+  }
+
+  .open .bar {
+    background-color: #fff;
   }
 }
